# Life

./: CMakeLists.txt  README.md  main.cpp
Game/: CMakeLists.txt  game.cpp  game.h
Game/View/: CMakeLists.txt  view.cpp  view.h
Game/World/: CMakeLists.txt  world.cpp  world.h
Output/: CMakeCache.txt  Makefile  cmake_install.cmake  life
Output/Game/: Makefile  cmake_install.cmake
Output/Game/View/: Makefile  cmake_install.cmake
Output/Game/World/: Makefile  cmake_install.cmake
